2006-05-23  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
	Remove unneeded cast.
	* libgnome/gnome-gconf.c: (_gnome_gconf_module_info_get): Small
	cleanup from Christian Persch. Closes bug #342304.
	* monikers/bonobo-config-bag.c: (bonobo_config_bag_finalize):
	* monikers/bonobo-moniker-conf-indirect.c:
	(bonobo_moniker_conf_indirect_resolve): Remove unneeded cast.

2006-05-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Update intltool requirement to 0.35.

2006-05-09  Benoît Dejean  <benoit@placenet.org>

	* configure.in: Bumped version number to 2.15.1.

	* libgnome/gnome-util.c: (gnome_util_user_shell): More const data.
	Closes #339672.

2006-05-01  Christian Persch  <chpe@cvs.gnome.org>

	* doc/reference/tmpl/gnome-program.sgml: Fix goption example.
	  Bug #339463, patch by Kristof Vansant.

2006-04-19  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-help.c: Add Since: entries to some API docs
	* libgnome/gnome-program.c: Same
	* libgnome/gnome-url.c: Same

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: New handling of ALL_LINGUAS
	* po/LINGUAS: Same. Closes bug #338549. Patch from
	Przemysław Grzegorczyk.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

========================== 2.14.1 ===========================

2006-04-04  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	  Plug potential mem leak introduced by my previous patch.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
	Fix compiler warnings from previous patch.
	* libgnome/gnome-program.c: (gnome_program_locate_file): Remove
	unused variable.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add --enable-esd switch. Patch from
	Leonardo Boshell. Closes bug #310972.
